hphp/hack/test/typecheck/concurrent/error/concurrent_use_before_assign.php.exp
File "concurrent_use_before_assign.php", line 9, characters 21-22:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
